# gb-emu

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: Doxyfile.in  resources.txt
include/: cartridge.h  cpu.h  gb.h  input.h  mbc.h  memory.h  platform.h  ppu.h  registers.h  timer.h
src/: cartridge.cpp  cpu.cpp  gb.cpp  input.cpp  main.cpp  mbc.cpp  memory.cpp  platform.cpp  ppu.cpp  registers.cpp  timer.cpp
tests/: testCartridge.cpp  testInput.cpp  testMBC.cpp  testMemory.cpp  testRegisters.cpp
